2003-08-07  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* fixed the fix ;)

	* fts/template.c (fts_template_make_instance): removed uneeded recreation of args member of fts_patcher structure.

	* fts/variable.c (define_expression_callback): reflected fts_patcher structure change (fts_patcher.args is a fts_tuple_t* now)

	* fts/patcher.c (patcher_init, patcher_delete): reflected fts_patcher structure change (fts_patcher.args is a fts_tuple_t* now).

	* include/ftsprivate/patcher.h: reflected fts_patcher structure change (fts_patcher.args is a fts_tuple_t* now).

2003-08-07  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* fts/object.c, fts/template.c, include/fts/patcher.h: fixed wrong object description 
	for template, fixed template arguments passing with $args variable.

2003-08-06  Francois Dechelle  <dechelle@limbe.ircam.fr>

	* fts/parser.y,fts/expression.c,fts/tokenizer.l: changed parser and tokenizer
	to re-introduce the {} syntax of 2.5; removed the use of () to denote tuples.
	The . (dot) operator is temporarily disabled, as there is not yet a clear consensus
	about its need. The quote character is now '.
	* fts/post.c,fts/tuple.c,packages/system/c/src/print.c: changed the printing of
	tuples and atom arrays to be consistent with new syntax.

2003-08-05  Patrice Tisserand  <Patrice.Tisserand@ircam.fr>

	* fts/variable.c (define_evaluate): fixed bug "[ 783531 ] error in messconst: undefined variable".

	* fts/object.c (eval_object_description_expression_callback): commented a piece of code to readd error message in GUI Error Panel, but perhaps this piece of code is usefull somewhere....

	* fts/template.c (fts_template_file_modified): fixed reinstanciation of template instance if a template file is modified.

2003-08-04  Carl Seleborg  <seleborg@licorne.ircam.fr>
	
	* Fixed bug "[ 768933 ] Ctrl-c, Ctrl-x and Ctrl-v" in Track and Sequence editors.
	* (see 2003-07-21).
	* Changed "Save to..." to "Save as..." in the template editor window.
